--- a/service_files/xyz.openbmc_project.State.Boot.PostCode@.service
+++ b/service_files/xyz.openbmc_project.State.Boot.PostCode@.service
@@ -3,7 +3,7 @@ Description=Post code manager
 
 [Service]
 ExecStart=/usr/bin/env post-code-manager
-SyslogIdentifier=post-code-manager
+SyslogIdentifier=post-code-manager %i
 Type=dbus
 BusName=xyz.openbmc_project.State.Boot.PostCode
 
