--- a/service_files/xyz.openbmc_project.State.Boot.PostCode@.service
+++ b/service_files/xyz.openbmc_project.State.Boot.PostCode@.service
@@ -2,8 +2,8 @@
 Description=Post code manager
 
 [Service]
-ExecStart=/usr/bin/env post-code-manager %i
-SyslogIdentifier=post-code-manager
+ExecStart=/usr/bin/env post-code-manager --host %i
+SyslogIdentifier=post-code-manager%i
 Type=dbus
 BusName=xyz.openbmc_project.State.Boot.PostCode%i
 
